--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,4 +5,5 @@ Mirror on Github:
   stage: deploy
   script:
     - set -e
+    - echo 'test'
     - git push --mirror https://$GITHUB_USER:$GITHUB_PASSWORD@github.com/$GITHUB_REPO
