--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,4 +7,4 @@ Mirror on Github:
     - set -e
     - echo 'test'
     - git push --mirror https://$GITHUB_USER:$GITHUB_PASSWORD@github.com/$GITHUB_REPO
-    - git checkout https://$GITHUB_USER:$GITHUB_PASSWORD@github.com/$GITHUB_REPO master
+    - git checkout master
