--- a/docker-compose.env
+++ b/docker-compose.env
@@ -1,35 +1,10 @@
-version: '2'
-services:
-  mariadb:
-    restart: always
-    container_name: mariadb
-    image: mariadb:latest
-    environment:
-      - MYSQL_USER=user
-      - MYSQL_PASSWORD=password
-      - MYSQL_DATABASE=database
-      - MYSQL_ROOT_PASSWORD=hello-world
-    volumes:
-      - /home/user/var/lib/mysql/project:/var/lib/mysql
+$MYSQL_ROOT_PASSWORD=hello-world
+$MYSQL_USER=user
+$MYSQL_PASSWORD=password
+$MYSQL_DATABASE=database
+$MYSQL_VOLUME=/home/user/src/web/project/mysql_data
 
-  apache2php7:
-    image: ipeos/php7-dev
-    ports:
-      - 8888:80
-    volumes:
-      - /home/user/public_html/project:/var/www/html
-    restart: always
-    links:
-      - mariadb
+$APACHE_VOLUME=/home/user/src/web/project/html
+$APACHE_PORT=8888
 
-  phpmyadmin:
-    restart: always
-    image: corbinu/docker-phpmyadmin:latest
-    links:
-      - mariadb:mysql
-    ports:
-      - 9999:80
-    environment:
-      - MYSQL_USERNAME=user
-      - MYSQL_PASSWORD=password
-      - MYSQL_ROOT_PASSWORD=hello-world
+$PHPMYADMIN_PORT=9999
