add PROJECT_NAME parameter for `container_name` prefix

--- a/docker-compose.env
+++ b/docker-compose.env
@@ -1,10 +1,12 @@
-$MYSQL_ROOT_PASSWORD=hello-world
-$MYSQL_USER=user
-$MYSQL_PASSWORD=password
-$MYSQL_DATABASE=database
-$MYSQL_VOLUME=/home/user/src/web/project/mysql_data
+export PROJECT_NAME=my-wonderful-project
 
-$APACHE_VOLUME=/home/user/src/web/project/html
-$APACHE_PORT=8888
+export MYSQL_ROOT_PASSWORD=hello-world
+export MYSQL_USER=user
+export MYSQL_PASSWORD=password
+export MYSQL_DATABASE=database
+export MYSQL_VOLUME=/home/user/src/web/project/mysql_data
 
-$PHPMYADMIN_PORT=9999
+export APACHE_VOLUME=/home/user/src/web/project/html
+export APACHE_PORT=8888
+
+export PHPMYADMIN_PORT=9999
